<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WowSai</string>

    <!-- 四个选项卡 -->
    <string name="base_tab_find">发现</string>
    <string name="base_tab_course">教程</string>
    <string name="base_tab_rank">排行</string>
    <string name="base_tab_mine">我的</string>

    <!-- 发现 -->
    <string name="base_title_find">手工客</string>
    <string name="base_title_find2">动态</string>
    <string name="find_shouye">首页</string>
    <string name="find_dongtai">动态</string>
    <string name="find_search_input">请输入关键字</string>
    <string name="find_search">搜索</string>

    <!-- 教程 -->
    <string name="base_title_course">教程</string>
    <string name="course_zuixin">最新教程</string>
    <string name="course_zuire">最热教程</string>
    <string name="course_fenlei">分类  </string>

    <!-- 排行 -->
    <string name="base_title_rank">排行榜</string>
    <string name="rank_yuebang">月榜</string>
    <string name="rank_zongbang">总榜</string>

    <!-- 我的 -->
    <string name="base_title_mine">个人</string>
    <string name="mine_tongzhi">消息通知</string>
    <string name="mine_shezhi">个人设置</string>
    <string name="msg_comment">评论</string>
    <string name="msg_back">回复</string>
    <string name="msg_callMe">\＠我</string>
    <string name="msg_private">私信</string>
    <string name="msg_handCircle">手工圈</string>
    <string name="msg_here">点击这里</string>
    <string name="msg_login">登录</string>
    <string name="set_myInfo">我的资料</string>
    <string name="set_myLevel">我的等级</string>
    <string name="set_changePwd">修改密码</string>
    <string name="set_goodDetail">商品订单</string>
    <string name="set_classDetail">课程订单</string>
    <string name="set_tuisong">推送通知</string>
    <string name="set_goodPing">给个好评</string>
    <string name="set_clearCash">清除缓存</string>
    <string name="set_suggest">意见反馈</string>
    <string name="set_about">关于我们</string>
    <string name="set_weixin">关注手工客微信</string>
    <string name="set_version">版本检测</string>
    <string name="login_userName">邮箱/手机号/用户名</string>
    <string name="login_pwd">请输入密码</string>
    <string name="login_register">还没有账号,去注册</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_weibo">新浪微博登录</string>
    <string name="login_weixin">微信登陆</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_more">更多登录方式</string>

    <!-- courseFragment -->
    <string name="emptyText">暂无教程</string>

    <!-- CustomRefreshListView -->
    <string name="custom_refresh_load">正在加载...</string>

    <!-- TopicActivity -->
    <string name="topicTitle">专题</string>

    <!-- 活动 -->
    <string name="campaignTitle">活动</string>
    <string name="campaignTab1">活动介绍</string>
    <string name="campaignTab2">最新作品</string>
    <string name="campaignTab3">投票最多</string>
    <string name="vote">投票</string>
    
    <!-- 首页 -->
    <string name="classes">互动课堂</string>
    <string name="daren">达人推荐</string>
    <string name="course">热门教程</string>
    <string name="topic">手工专题</string>

    <!-- 达人 -->
    <string name="darenTitle">手工达人</string>
    <string name="courseAnd">教程|</string>

</resources>
