<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <FrameLayout
            android:id="@+id/layout_main_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#abc"
            />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/BaseTabHeight"
            android:layout_marginBottom="4dp"
            >
        <TextView
                android:id="@+id/textView_main_find"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/tab_find"
                android:text="@string/base_tab_find"
                android:clickable="true"
                />

        <TextView
                android:id="@+id/textView_main_course"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/tab_course"
                android:text="@string/base_tab_course"
                android:clickable="true"
                />

        <TextView
                android:id="@+id/textView_main_rank"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/tab_rank"
                android:text="@string/base_tab_rank"
                android:clickable="true"
                />

        <TextView
                android:id="@+id/textView_main_mine"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/tab_mine"
                android:text="@string/base_tab_mine"
                android:clickable="true"
                />
    </LinearLayout>
</LinearLayout>