<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/listGap"
        >

    <View
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <LinearLayout
            android:id="@+id/linearLayout_message_fragment_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            >

        <com.qianfeng.wowsai.view.custom.CircleImageView
                android:id="@+id/imageView_message_fragment_head_img"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/sgk_avater_normal"
                />

        <LinearLayout
                android:layout_marginLeft="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                >

            <TextView
                    android:id="@+id/textView_message_fragment_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_here"
                    />

            <TextView
                    android:id="@+id/textView_message_fragment_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_login"
                    android:textColor="@color/red"
                    />
        </LinearLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/arrow_right"
                />
    </LinearLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <TextView
            android:id="@+id/textView_message_fragment_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_comment"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/arrow_right"
            android:padding="12dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <TextView
            android:id="@+id/textView_message_fragment_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_back"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/arrow_right"
            android:padding="12dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <TextView
            android:id="@+id/textView_message_fragment_callMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_callMe"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/arrow_right"
            android:padding="12dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <TextView
            android:id="@+id/textView_message_fragment_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_private"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/arrow_right"
            android:padding="12dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

    <TextView
            android:id="@+id/textView_message_fragment_handCircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_handCircle"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/arrow_right"
            android:padding="12dp"
            android:background="@drawable/tab_click"
            android:clickable="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            />

</LinearLayout>